--- a/src/css/home-styles.css
+++ b/src/css/home-styles.css
@@ -33,6 +33,8 @@
 }
 #hero h1{
   margin-bottom:40px;
+  overflow-wrap: break-word;
+  hyphens: auto;
 }
 /* ********* */
 
@@ -101,7 +103,11 @@
   max-height:60px;
   margin-bottom:20px;
 }
-
+@media only screen and (max-width:1200px){
+  .category-col h3{
+    font-size: 10px;
+  }
+}
 
 /* ********* */
 /* projects section */
@@ -133,10 +139,18 @@
 }
 @media only screen and (max-width:800px){
   .col-img{
-    width:300px;
+    /* width:300px; */
+    /* margin-bottom:0px; */
+  }
+}
+@media only screen and (max-width:600px){
+  .col-img{
+    /* width:300px; */
+    width:100%;
     margin-bottom:0px;
   }
-  #projects .col-content, #projects .col-footer {
+  #projects .col-content,
+  #projects .col-footer {
     display: none;
   }
 }
